# Blossom-Bloom

./: .gitignore  README.md  pyproject.toml
Debug/: groceries.txt  shortgames.py  test.py
Examples/Async/: async.py
Examples/Beginner/: arithmetic.py  builtins.py  control_flow.py  variables.py
Examples/GUI/: entry.py  radiobox.py  windows.py
Examples/Optimization/: caching.py
Examples/Threading/: threads.py
Projects/: nutrical.py  skynet.py
Projects/ChainScripts/: script1.py  script2.py
Projects/Exercise/: sample.py
Python/: README.md  pyproject.toml  tycoon.py
Python/Examples/Advanced/Encryption/: encrypting.py  fernet.py  implementation.py
Python/Examples/Advanced/Optimization/: caching.py
Python/Examples/Advanced/Threading/: threadlocking.py  threads.py
Python/Examples/Beginner/: arithmetic.py  builtins.py  control_flow.py  functions.py  strings.py  variables.py
Python/Examples/Encryption/: encrypting.py  fernet.py  implementation.py
Python/Examples/GUI/: buttons.py
Python/Examples/Optimization/: caching.py
Python/Examples/Threading/: threadlocking.py
Python/Practice/: input_info.py
Rust/: README.md
Rust/Examples/: testfile.txt
Rust/Examples/Basics/: Cargo.toml
Rust/Examples/Basics/arithmetic/src/: main.rs
Rust/Examples/Basics/libraries/: Cargo.toml
Rust/Examples/Basics/oop/: Cargo.toml
Rust/Examples/Basics/oop/src/: enums.rs  impls.rs  structs.rs  traits.rs  unions.rs
Rust/Examples/Basics/types/: Cargo.toml
Rust/Examples/Basics/types/src/: boxes.rs  generics.rs  numerals.rs  options.rs
(+3 files in other folders)
