[package]
name = "oop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "impls"
path = "src/impls.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "unions"
path = "src/unions.rs"


[dependencies]
